--- a/New folder (5)/indx.html
+++ b/New folder (5)/indx.html
@@ -13,8 +13,8 @@
     
 
   <nav class="navbar2">
-    <img id="logo1" src="./Logo (1).png" alt="Logo" width="30" height="24"  >
-  </nav
+    <img id="logo1" src="./Logo (1).png" alt="Logo">
+  </nav>
               <ul class="nav justify-content-center">
                 <li class="nav-item">
                   <a class="nav-link" href="#" style=" color: black;text-decoration: none;
@@ -34,7 +34,7 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">
-                    <button type="button" class="btn btn-primary btn-lg2"> Request a quote </button>
+                    <button type="button" class="btn-1"> Request a quote </button>
                   </a>
                 </li>
               </ul>
